# SmallEngine

./: .gitignore  CMakeLists.txt
Editor/: CMakeLists.txt
Editor/src/: main.cpp
Launcher/: CMakeLists.txt
Launcher/include/: Log.h  Window.h  pch.h
Launcher/src/: Log.cpp  Window.cpp  main.cpp
run/: cmake.bat  cmake.sh  make.bat  make.sh  run.bat  run.sh  runL.sh
src/: main.cpp
